--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
           <head>
             <meta charset="utf-8">
             <link rel="stylesheet" href="./css/style.css">
-          <title>首页</title>
+          <title>Rebins's Server官网-首页</title>
                   <link rel="shortcut icon" href="/favicon.ico" />
                   <link rel="bookmark"href="/favicon.ico" />
           </head>
