--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ function MM_swapImage() { //v3.0
           <div>
           <div class="panel">
             <p>全世界正版玩家联合起来，为了Minecraft的未来，为了我们的未来</p>
-            <p>“为什么我的眼中常含泪水，因为我爱着这个世界爱着深沉”</p>
+            <p>“为什么我的眼中常含泪水，因为我爱着这个世界爱得深沉”</p>
           </div>
         </div>
         <div>
