--- a/510.html
+++ b/510.html
@@ -3,7 +3,7 @@
           <head>
             <meta charset="utf-8">
             <link rel="stylesheet" href="./css/style.css">
-          <title>Rebine's Server官网-首页</title>
+          <title>510 - Not Extended</title>
           <link rel="shortcut icon" href="https://rebines.github.io/server-icon.png">
           <link rel="bookmark" href="https://rebines.github.io/server-icon.png">
           <style type="text/css">
